some changes in flex wrap

--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ border: none;
       display: flex;
       align-items: center;
       justify-content: space-around;
+      flex-wrap: wrap;
     }
 
     .div531{
